(bug 38545) Fix RTL position of the drop-down arrow
In RTL interface the drop-down arrow overlaps with the text.

The arrow was positioned explicitly in relation to the left margin, and this
can't work in a flipped RTL environment. I changed the position to "right"
and modified the arrow image a bit.

Some visual tweaks to the arrow may still be needed. Another option can be
to convert the image to SVG or to use a character like ▼.

--- a/modules/ve/ui/styles/ve.ui.Toolbar.css
+++ b/modules/ve/ui/styles/ve.ui.Toolbar.css
@@ -129,7 +129,7 @@
 	padding-left: 0.75em;
 	padding-right: 24px;
 	background-image: url(images/arrow-down.png);
-	background-position: 8.75em center;
+	background-position: right;
 	background-repeat: no-repeat;
 }
 .es-toolbarDropdownTool .es-menuView {
